Fix profile image spacing

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -22,6 +22,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-right: 8px;
 }
 
 .logo {
